<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b1"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"
                android:text="@string/button1"
                android:textSize="30sp"
                app:cornerRadius="70dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b2"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"
                android:text="@string/button2"
                android:textSize="30sp"
                app:cornerRadius="70dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b3"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"
                android:text="@string/button3"
                android:textSize="30sp"
                app:cornerRadius="70dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b4"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"
                android:text="@string/button4"
                android:textSize="30sp"
                app:cornerRadius="70dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b5"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"
                android:text="@string/button5"
                android:textSize="30sp"
                app:cornerRadius="70dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b6"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"
                android:text="@string/button6"
                android:textSize="30sp"
                app:cornerRadius="70dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b7"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"
                android:text="@string/button7"
                android:textSize="30sp"
                app:cornerRadius="70dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b8"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"
                android:text="@string/button8"
                android:textSize="30sp"
                app:cornerRadius="70dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b9"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"
                android:text="@string/button9"
                android:textSize="30sp"
                app:cornerRadius="70dp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>